--- a/deliverable1.qmd
+++ b/deliverable1.qmd
@@ -2,8 +2,8 @@
 
 ## Approach
 
+Conduct field work to collect additional data points.
 
 ## Deliverables
 
-Produce an updated urban soil survey for the Minneapolis/Saint Paul/Bloomington Metropolitan Statistical Area and develop a
-dynamic soil property (DSP) investigation.
+Produce an updated urban soil survey for the Minneapolis/Saint Paul/Bloomington Metropolitan Statistical Area and develop a dynamic soil property (DSP) investigation.
