--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,10 @@
 # Preface {.unnumbered}
 
-This quarto book documents the metadata architecture for "Implementing an Urban Soil Survey Framework in Minnesota" - USDA-NRCS Award #NR236322XXXXC008.
+This quarto book documents the metadata architecture for "Implementing an Urban Soil Survey Framework in Minnesota" - USDA-NRCS Award #NR236322XXXXC008. This is a living, growing document intended to provide rich, accessible, and transparent documentation of project structure, deliverables, and data management. It will be continuously updated through the life of the project and will be assigned a persistent doi at the end of the project to provide long-term archiving and availability.
+
+<p> </p>
+
+<p> </p>
 
 ## Project Description
 
@@ -21,20 +25,14 @@ This document contains metadata for each of the grant deliverables, as well as g
 ## Key Personnel
 
 -   Nic Jelinski; Associate Professor, University of Minnesota (PI)
--   Joe Brennan; State Soil Scientist, NRCS
+-   Joe Brennan; State Soil Scientist, USDA-NRCS
 -   Nora Pearson; Researcher, University of Minnesota
 
 ## Additional Collaborators
 
-## Co-Authorship and Data Sharing Agreements
-
-[Co-authorship agreement](co-authorship-template.qmd) 
-
-[Data Sharing agreement](data-use-and-sharing.qmd)
-
 ## Funding Source and RFP
 
-This project was funded by a cooperative agreement bewteen the USDA-NRCS and the University of Minnesota.
+This project was funded by a cooperative agreement between the USDA-NRCS and the University of Minnesota.
 
 ## Project Website
 
