--- a/minutes-02FEB2024-joe-nic-nora.qmd
+++ b/minutes-02FEB2024-joe-nic-nora.qmd
@@ -51,7 +51,7 @@
 
 -   Joseph estimates NRCS can commit around 50 staff weeks this first field season
 -   This includes new soil scientist Adam Devlin starting in July who can commit 2-3 days per week
--   Other NRCS staff like Helen, Clayton, Matt may also be able to assist periodically in the field
+-   Other NRCS staff like Kellen, Clayton, Matt may also be able to assist periodically in the field
 -   Nic suggested a broader spatial and temporal sampling plan over the next couple years, given the extra resources
 -   The U of MN team can start developing a draft plan to share with NRCS in the coming weeks
 -   Nora confirmed the U of MN side has capacity this season with her time plus opportunistic sampling
