--- a/index.qmd
+++ b/index.qmd
@@ -27,6 +27,7 @@ This document contains metadata for each of the grant deliverables, as well as g
 -   Randy Riddle; Senior Soil Scientist for Urban Soil Survey, NRCS
 -   Francine Lheritier; Natural Resource Soil Scientist, NRCS
 -   Shaunna Repking; Soil Scientist, NRCS
+-   Patty Burns; Soil Scientist, NRCS
 
 ## Additional Collaborators
 
