--- a/minutes-02FEB2024-joe-nic-nora.qmd
+++ b/minutes-02FEB2024-joe-nic-nora.qmd
@@ -2,11 +2,12 @@
 
 ## Meeting Minutes
 
-### Date: Tuesday, February 06, 2024
+### Date 
+Friday, February 02, 2024
 
 ### Attendees:
 
--   Joseph Brennan (NRCS)\
+-   Joseph Brennan (NRCS)
 -   Nic Jelinski (UMN)
 -   Nora Pearson (UMN)
 
