--- a/minutes-20FEB2024-patty-nic-nora.qmd
+++ b/minutes-20FEB2024-patty-nic-nora.qmd
@@ -6,6 +6,9 @@
 -   Nora Pearson, University of Minnesota
 -   Patty Burns, NRCS
 
+## Date
+Tuesday, February 20, 2024
+
 ## Project Overview
 
 -   This project involves updating SSURGO soil survey data for the Twin Cities metro area.
