--- a/minutes-06MAR2024-patty-nora.qmd
+++ b/minutes-06MAR2024-patty-nora.qmd
@@ -2,11 +2,11 @@
 
 ## Date
 
-March 6, 2024
+Wednesday, March 6, 2024
 
 ## Attendees
 
--   Nora B Pearson
+-   Nora Pearson
 -   Patty Burns
 
 ## Agenda
