--- a/deliverable1.qmd
+++ b/deliverable1.qmd
@@ -2,7 +2,11 @@
 
 ## Approach
 
-Conduct field work to collect additional data points.
+We are completing soil profile descriptions during the field seasons of 2024, 2025, and 2026 across the Twin Cities metro to produce an updated survey.
+
+If you live in the Metro and are willing to let us visit your property, please fill out this Google Form: [Residential Site Interest Form](https://forms.gle/zgRBZLXrzCVcu9Cv6).
+
+For more information on our field methods, please see this PDF: [Field Methods One Pager](https://drive.google.com/file/d/1X6XBsGOcCU1JiZbxwIl6-bq6rEZP8qi7/view?usp=sharing).
 
 ## Deliverables
 
