--- a/index.qmd
+++ b/index.qmd
@@ -35,9 +35,9 @@ This document contains metadata for each of the grant deliverables, as well as g
 -   Three Rivers Parks District (soil sampling permit)
 -   US Fish & Wildlife Service (soil sampling permit)
 
-## Funding Source and RFP
+## Funding Source
 
-This project was funded by a cooperative agreement bewteen the USDA-NRCS and the University of Minnesota.
+This project was funded by a cooperative agreement between the USDA-NRCS and the University of Minnesota.
 
 ## Project Website
 
